# va-framework

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: __init__.py  jobs.py  main.py  models.py  query_engine.py  registry.py
apps/api/data/: energy.sample.json  miserables.sample.json
apps/api/tests/: test_data_foundation.py  test_health.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  route-smoke.test.ts
apps/web/components/: providers.tsx
apps/web/lib/: coordination-store.ts  graph-workbench-store.ts  graph-workbench.test.ts  graph-workbench.ts  starter-workbench.test.ts  starter-workbench.ts  ui-studio-store.ts  ui-studio.test.ts  ui-studio.ts  visualization-catalog.test.ts  visualization-catalog.ts
apps/web/types/: assets.d.ts
client/: README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vue.config.js
client/src/: App.tsx  App.vue  index.css  main.js  main.ts  main.tsx  quasar.js
client/src/assets/: NetflixBillBurr.json  NetflixCountry.json  NetflixGenre.json  NetflixReleaseYear.json
client/src/components/: CompositionD3Bar.vue  D3BarButton.tsx  (+23 more)
docs/: gallery-contributors.md
server/: requirement.txt  requirements.txt  run.py
server/data/: DatasaurusDozen.csv  DatasaurusDozen.json  netflix_titles.csv
server/src/: __init__.py  models.py  views.py
(+68 files in other folders)
